<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="publish">发布</string>
    <string name="publish_review_select_movie_score_hint">选择评分</string>
    <string name="publish_review_original">这是我的原创内容</string>
    <string name="publish_review_original_link"><u>《原创内容声明》</u></string>
    <string name="publish_review_Spoiler">包含剧透</string>
    <string name="publish_review_title_hint">标题</string>
    <string name="publish_review_content_hint">来来来，说说你的看法~</string>
    <string name="publish_img_desc">图片描述</string>
    <string name="publish_talk_about_your_opinion_hint">来来来，说说你的看法~</string>
    <string name="publish_share_with_you_hint">想和大家分享什么？写出来吧...</string>
    <string name="publish_say_something_hint">说点什么...</string>
    <string name="publish_title_hint">标题（填写标题会让更多人看见）</string>
    <string name="publish_input_title_hint">输入标题（1-50字)</string>
    <string name="publish_input_content_hint">输入正文（1-10000字)</string>
    <string name="publish_original_statement_tips">这是我的原创内容《原创内容声明》</string>
    <string name="publish_including_spoiler_tips">包含剧透</string>
    <string name="publish_to_family">发布到家族:</string>
    <string name="publish_to_film">发布到影片:</string>
    <string name="chose_publish_family">选择家族</string>
    <string name="do_you_want_delete_family">是否删除关联家族?</string>
    <string name="do_you_want_delete_image">是否删除图片？</string>
    <string name="do_you_want_delete_movie">是否删除影片？</string>
    <string name="do_you_want_delete_video">是否删除视频？</string>
    <string name="publish_save_draft">保存草稿?</string>
    <string name="picture_desc">图片描述</string>
    <string name="add_family_get_more_likes">添加到家族能获得更多赞</string>
    <string name="please_change_to_long_film_review_and_continue_to_publish">请转为长影评继续发布</string>
    <string name="publish_too_many_words_please_change_to_long_film_review">文字太多了，\n请转为长影评继续编辑</string>
    <string name="publish_deletion_content">删减内容</string>
    <string name="publish_change_to_long_film_review">转为长影评</string>
    <string name="publish_score_level_0">选择评分</string>
    <string name="publish_fail">发布失败</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_again">重新发布</string>
    <string name="space"> </string>
    <string name="publish_only_add_pictures_at_most">"最多只能添加%1$d张图片</string>
    <string name="publish_only_add_video_at_most">最多只能添加%1$d部视频</string>
    <string name="publish_only_add_movie_at_most">最多只能添加%1$d部电影</string>
    <string name="publish_cover_text">封面</string>
    <string name="publish_add_family_get_more">添加到家族后能获得更多赞</string>
    <string name="publish_delete_tag">删除标记？</string>
    <string name="publish_delete_tips">删除标记状态，评分和影评也将被删除</string>
    <string name="publish_rating_changed_to_sub_rating">切换分项评分</string>
    <string name="publish_rating_changed_to_rating">切换评分</string>
    <string name="publish_component_edit_cover">编辑封面</string>
    <string name="publish_component_video_title_hint">输入标题（1-50字）</string>
    <string name="publish_component_video_des_hint">输入文字（1-200字）</string>
    <string name="publish_component_related_movie">相关电影</string>
    <string name="publish_component_class_select">选择分类</string>
    <string name="publish_component_optional">(选填，最多关联10部影片)</string>
    <string name="publish_component_required_optional">(必选)</string>
    <string name="publish_component_video_publish">发布视频</string>
    <string name="publish_component_video_publish_save_draft">存草稿</string>
    <string name="publish_component_all_video">所有视频</string>
    <string name="publish_component_next_step">下一步</string>
    <string name="publish_component_video_edit">编辑视频</string>
    <string name="publish_component_please_upload_video_cover">请上传视频封面</string>
    <string name="publish_component_please_input_title">请填写标题(1-50字)</string>
    <string name="publish_component_please_input_video_des_correct">请填写描述(1-200字)</string>
    <string name="publish_component_please_select_movie_class">请选择视频分类</string>
    <string name="publish_component_dialog_related_article_title">关联文章</string>
    <string name="publish_component_dialog_related_article_hint">请输入文章ID</string>
    <string name="publish_component_dialog_related_article_error">请填写正确的文章ID</string>
    <string name="publish_component_uploading">上传中...</string>
    <string name="publish_component_upload_failed">上传失败</string>
    <string name="publish_component_please_upload_video_first">请先上传视频</string>
    <string name="publish_component_drawft_had_saved">草稿已保存</string>
    <string name="publish_component_drawft_save_failed">草稿保存失败</string>

    <string name="publish_component_permission_allow_all">允许所有人</string>
    <string name="publish_component_permission_forbid_all">禁止所有人</string>

    <string name="publish_component_title_input_choose_group">选择家族</string>
    <string name="publish_component_title_input_choose_category">选择分类</string>
    <string name="publish_component_title_input_source">文章来源</string>
    <string name="publish_component_title_input_editor">编辑署名</string>
    <string name="publish_component_title_input_source_tips">（默认选择无来源）</string>
    <string name="publish_component_title_input_editor_tips">（默认选择无署名）</string>
    <string name="publish_component_title_input_movie">关联影片</string>
    <string name="publish_component_title_input_actor">关联影人</string>
    <string name="publish_component_title_input_article">关联文章</string>
    <string name="publish_component_title_input_label">设置标签</string>
    <string name="publish_component_title_input_permission">评论权限</string>
    <string name="publish_component_title_input_add_pk">添加PK</string>
    <string name="publish_component_hint_input_source">请输入文章来源</string>
    <string name="publish_component_hint_input_editor">请输入编辑署名</string>
    <string name="publish_component_toast_input_source_error">请输入正确的文章来源</string>
    <string name="publish_component_toast_input_editor_error">请输入正确的编辑署名</string>
    <string name="publish_component_hint_input_article_id">请输入文章ID</string>
    <string name="publish_component_hint_input_label">请输入标签</string>
    <string name="publish_component_hint_input_pk_label1">选项1：请输入6个字以内的描述</string>
    <string name="publish_component_hint_input_pk_label2">选项2：请输入6个字以内的描述</string>
    <string name="publish_component_hint_edit_input_link_title">插入链接</string>
    <string name="publish_component_hint_edit_input_link_text">文字</string>
    <string name="publish_component_hint_edit_input_link_url">链接地址</string>
    <string name="publish_component_add_cover">设置封面图</string>
    <string name="publish_component_set_images">设置图集</string>
    <string name="publish_component_add_images">添加图集</string>
    <string name="publish_component_allow_all">允许所有人</string>
    <string name="publish_component_forbid_all">禁止所有人</string>
    <string name="publish_component_declare">附加声明</string>
    <string name="publish_component_copyright">版权声明</string>
    <string name="publish_component_disclaimer">免责声明</string>

    <string name="publish_component_menu_text_style">文字格式</string>
    <string name="publish_component_menu_text_align">对齐方式</string>
    <string name="publish_component_menu_text_size">文字大小</string>
    <string name="publish_component_menu_text_color">文字颜色</string>
    <string name="publish_component_menu_text_size_1">小</string>
    <string name="publish_component_menu_text_size_2">标准</string>
    <string name="publish_component_menu_text_size_3">大</string>
    <string name="publish_component_menu_text_size_4">超大</string>

    <string name="publish_component_menu_add_movie">添加影片</string>
    <string name="publish_component_menu_add_video">添加视频</string>
    <string name="publish_component_menu_add_link">添加链接</string>

    <string name="publish_component_editor_images_title">%1$d加链接</string>
    <string name="publish_component_editor_images_desc">单张图片最大支持10MB，最多上传100张图片</string>

    <string name="publish_component_click_to_scan">点击查看</string>
    <string name="publish_component_video_publish_success">您的视频提交成功</string>
    <string name="publish_component_video_only_can_publish">发布后内容只能发布</string>

    <string name="publish_component_toast_input_title">请填写标题（1-50字）</string>
    <string name="publish_component_toast_input_content">请填写正文（1-10000字）</string>
    <string name="publish_component_toast_content_exceed">正文超过10000字</string>
    <string name="publish_component_toast_film_comment_content_exceed">短影评内容超过210字</string>
    <string name="publish_component_toast_select_source">请选择文章来源</string>
    <string name="publish_component_toast_select_editor">请选择编辑署名</string>
    <string name="publish_component_toast_select_group">请选择家族</string>
    <string name="publish_component_toast_content_uploading">视频未上传成功，不能发布</string>
    <string name="publish_component_article_tips">优质的内容有利于被推荐到“TA说”频道进行展示</string>
    <string name="publish_component_jaunary_tips">优质的内容有利于被推荐到社区首页展示</string>
    <string name="publish_component_tips">优质的内容有利于被推荐到“种草”频道进行展示</string>
    <string name="publish_component_tips_join_group">您未加入社区家族</string>
    <string name="publish_component_tips_join_group_ok">好的</string>
    <string name="publish_component_tips_join_group_go">去社区</string>

</resources>