<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <TextView
        android:id="@+id/labelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/publish_component_menu_text_size"
        android:textColor="@color/color_8798af"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemView1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/publish_component_menu_text_size_1"
        android:textColor="@color/color_404c57"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelView"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/itemView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/publish_component_menu_text_size_2"
        android:textColor="@color/color_404c57"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemView3"
        app:layout_constraintStart_toEndOf="@+id/itemView1"
        app:layout_constraintTop_toBottomOf="@+id/labelView"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/itemView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/publish_component_menu_text_size_3"
        android:textColor="@color/color_404c57"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemView4"
        app:layout_constraintStart_toEndOf="@+id/itemView2"
        app:layout_constraintTop_toBottomOf="@+id/labelView"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/itemView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/publish_component_menu_text_size_4"
        android:textColor="@color/color_404c57"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemView3"
        app:layout_constraintTop_toBottomOf="@+id/labelView"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>