<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editorOriginLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/publish_component_title_input_source"
            android:textColor="@color/color_404c57"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/publish_component_title_input_source_tips"
            android:textColor="@color/color_cbd0d7"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.kotlin.android.publish.component.widget.article.label.LabelView
        android:id="@+id/articleOriginView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@color/color_f3f3f4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/publish_component_title_input_editor"
            android:textColor="@color/color_404c57"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/publish_component_title_input_editor_tips"
            android:textColor="@color/color_cbd0d7"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.kotlin.android.publish.component.widget.article.label.LabelView
        android:id="@+id/signatureOriginView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />
</LinearLayout>