<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/offset_60px"
    android:paddingBottom="@dimen/offset_30px"
    android:paddingLeft="@dimen/offset_30px"
    android:paddingRight="@dimen/offset_30px"
    >

    <!-- 原创checkbox -->
    <ImageView
        android:id="@+id/mOriginalCb"
        android:layout_width="@dimen/offset_24px"
        android:layout_height="@dimen/offset_24px"
        app:srcCompat="@drawable/icon_publish_check_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <!-- 原创文字 -->
    <TextView
        android:id="@+id/mOriginalTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/offset_10px"
        android:text="@string/publish_review_original"
        android:textColor="@color/color_4e5e73"
        android:textSize="@dimen/offset_14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/mOriginalCb"
        />

    <!-- 原创链接 -->
    <TextView
        android:id="@+id/mOriginalLinkTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_review_original_link"
        android:textColor="@color/color_20a0da"
        android:textSize="@dimen/offset_14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/mOriginalTv"
        />

    <!-- 剧透文字 -->
    <TextView
        android:id="@+id/mSpoilerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_review_Spoiler"
        android:textColor="@color/color_4e5e73"
        android:textSize="@dimen/offset_14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!-- 剧透checkbox -->
    <ImageView
        android:id="@+id/mSpoilerCb"
        android:layout_width="@dimen/offset_24px"
        android:layout_height="@dimen/offset_24px"
        android:layout_marginRight="@dimen/offset_10px"
        app:srcCompat="@drawable/icon_publish_check_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/mSpoilerTv"
        />

</androidx.constraintlayout.widget.ConstraintLayout>